fixed horizontal scrollbar

--- a/src/Footer/footer.css
+++ b/src/Footer/footer.css
@@ -1,4 +1,5 @@
 .footer {
+  overflow: auto;
   background: #f1f1f1;
   text-align: center;
   padding: 2rem 2rem 0;
