--- a/src/app.css
+++ b/src/app.css
@@ -1,3 +1,8 @@
+.app {
+  overflow: hidden;
+  position: relative;
+}
+
 .wrapper {
   padding: 0 4rem;
 }
