--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,8 @@
 html,
-body {
+body,
+#root {
   height: 100%;
+  width: 100%;
   min-height: 100%;
 }
 
@@ -51,8 +53,4 @@ a {
 
 a:hover {
   text-decoration: underline;
-}
-
-#root {
-  height: 100%;
 }
